--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,12 +1,20 @@
+进行了以下的小修改
+- 修复了镜像操作错误显示为复制的问题
+- 修复了文本高度计算错误， 导致的顶端弹出提示停留时间过长的问题
+- 改善了网格线设置的默认参数， 不再包括 -0.2 处的横线， 老用户需要手动重新设置
+- 修复了多处 UI 排版问题
+以下是最近一次大更新的更新记录
+---
 欢迎来到第一个版本的 Arcade-plus ！
-Arcade-plus 是一个从原版 Arcade fork 出来的全新版本 Arcade ，在这个版本中我们会致力于解决原版 Arcade 作者不愿和不能解决的问题，为各位 Arcade 使用者提供更好的制谱工具。
+Arcade-plus 是一个从原版 Arcade fork 出来的全新版本 Arcade 。 在这个版本中， 我们会致力于解决原版 Arcade 作者不愿和不能解决的问题， 为各位 Arcade 使用者提供更好的制谱工具。
 与原版 Arcade 相比， Arcade-plus 进行了如下的改动：
-- 解决了版权问题，并完全重做了皮肤功能
-- 修改了自定义背景的路径，请手动移动你的自定义背景文件
-- 对 UI 元素排列进行了大幅改动，顺便改掉了图标样式
-- 窗口大小改为在编辑器内设置了（默认是 1280x720）
+- 解决了版权问题， 并完全重做了皮肤功能
+- 修改了自定义背景的路径， 请手动移动你的自定义背景文件
+- 对 UI 元素排列进行了大幅改动， 顺便改掉了图标样式
+- 窗口大小改为在编辑器内设置了 （默认是 1280x720）
 - 限制了最多撤销次数，默认是 200 但可以设置
 - 批量修改操作现在只算作一个操作
+- （3月5日补充） 略微增大了最大音量
 - 修正了小节线以及节拍线的计算
 - 修正了鼠标所指位置的时间的计算的一个问题
 - 修复了初次启动时速度为 0 的问题
