Arc color correction + Some small changes

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,8 +1,12 @@
-进行了以下的小修改
+Arc 的颜色现在会随着高度变化了
+除此之外进行了以下的小修改
 - 修复了镜像操作错误显示为复制的问题
 - 修复了文本高度计算错误， 导致的顶端弹出提示停留时间过长的问题
 - 改善了网格线设置的默认参数， 不再包括 -0.2 处的横线， 老用户需要手动重新设置
 - 修复了多处 UI 排版问题
+- 通过更改皮肤材质的 mipmap 等级， 缓解了天键发糊的问题 （可能会导致更吃显卡）
+- 加载谱面时的转场音效现在受谱面音量变化了
+- 调整了选中的 Arc 的颜色
 以下是最近一次大更新的更新记录
 ---
 欢迎来到第一个版本的 Arcade-plus ！
