Timing Refactor + connectionLine Fix

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,3 +1,8 @@
+重构了 Timing 相关计算算法，不再要求在 0 时刻有 Timing
+除此之外进行了以下的小修改
+- 天地连接线不再会在编辑 arc 或 arctap 不消失
+- 不再能随意修改窗口大小，只能在设置中选择
+---
 Arc 的颜色现在会随着高度变化了
 除此之外进行了以下的小修改
 - 修复了镜像操作错误显示为复制的问题
