--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,34 +1,5 @@
-修复了长条判定贴图无变化的问题
----
-重构了 Timing 相关计算算法，不再要求在 0 时刻有 Timing
-除此之外进行了以下的小修改
-- 天地连接线不再会在编辑 arc 或 arctap 不消失
-- 不再能随意修改窗口大小，只能在设置中选择
----
-Arc 的颜色现在会随着高度变化了
-除此之外进行了以下的小修改
-- 修复了镜像操作错误显示为复制的问题
-- 修复了文本高度计算错误， 导致的顶端弹出提示停留时间过长的问题
-- 改善了网格线设置的默认参数， 不再包括 -0.2 处的横线， 老用户需要手动重新设置
-- 修复了多处 UI 排版问题
-- 通过更改皮肤材质的 mipmap 等级， 缓解了天键发糊的问题 （可能会导致更吃显卡）
-- 加载谱面时的转场音效现在受谱面音量变化了
-- 调整了选中的 Arc 的颜色
-以下是最近一次大更新的更新记录
----
-欢迎来到第一个版本的 Arcade-plus ！
-Arcade-plus 是一个从原版 Arcade fork 出来的全新版本 Arcade 。 在这个版本中， 我们会致力于解决原版 Arcade 作者不愿和不能解决的问题， 为各位 Arcade 使用者提供更好的制谱工具。
-与原版 Arcade 相比， Arcade-plus 进行了如下的改动：
-- 解决了版权问题， 并完全重做了皮肤功能
-- 修改了自定义背景的路径， 请手动移动你的自定义背景文件
-- 对 UI 元素排列进行了大幅改动， 顺便改掉了图标样式
-- 窗口大小改为在编辑器内设置了 （默认是 1280x720）
-- 限制了最多撤销次数，默认是 200 但可以设置
-- 批量修改操作现在只算作一个操作
-- （3月5日补充） 略微增大了最大音量
-- 修正了小节线以及节拍线的计算
-- 修正了鼠标所指位置的时间的计算的一个问题
-- 修复了初次启动时速度为 0 的问题
-- 可能修复了退出时卡死的问题
-- 进行了小幅内存占用优化
-- 更新了 Unity 引擎的版本
+欢迎来到 Arcade-plus 的第二个大更新！
+本次更新的内容有
+- 显示运行日志的功能移动到设置窗口中
+- 略微调整了各个按钮的位置
+- 修复了又一个与时间、位置有关的 Bug
