Refactor Marking Menu

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,5 +1,7 @@
 欢迎来到 Arcade-plus 的第二个大更新！
 本次更新的内容有
+- 可能修复了右键菜单状态错乱的问题
+- Arc 起点及终点的位置改为仅显示两位小数
 - 显示运行日志的功能移动到设置窗口中
 - 略微调整了各个按钮的位置
 - 修复了又一个与时间、位置有关的 Bug
