--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,8 +1,11 @@
 欢迎来到 Arcade-plus 的第二个大更新！
 本次更新的内容有
+- 输出按时间排序时，相同时间的物件将会按照物件类型排序
+- 输出中的 Arctap 会按照时间排序了
 - 略微修复了 Timing 编辑不起作用的问题
 - 可能修复了右键菜单状态错乱的问题
 - Arc 起点及终点的位置改为仅显示两位小数
 - 显示运行日志的功能移动到设置窗口中
 - 略微调整了各个按钮的位置
 - 修复了又一个与时间、位置有关的 Bug
+- 进行了些许的内部代码重构
