Don't Copy arc and arctap on it at the same time

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,9 +1,14 @@
 欢迎来到 Arcade-plus 的第二个大更新！
 本次更新的内容有
+- 支持了 singularity vvvip 中出现的 scenecontrol 语句
+- 移除了旧的 special 语句支持
 - 输出按时间排序时， 相同时间的物件将会按照物件类型排序
 - 输出中的 Arctap 会按照时间排序了
-- 略微修复了 Timing 编辑不起作用的问题
+- 复制粘贴时， 如果同时选中了黑线和其上的 arctap， 那么 arctap 将不会被复制
+- 修复了 Timing 编辑不起作用的问题
+- 修复了编辑 Timing 时谱面内容和时间网格线不更新的问题
 - 可能修复了右键菜单状态错乱的问题
+- 修复了分辨率纵横比变化时， 场景布局不更新的问题
 - Arc 起点及终点的位置改为仅显示两位小数
 - 显示运行日志的功能移动到设置窗口中
 - 略微调整了各个按钮的位置
