Change the behavior of selection when copying note

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,4 +1,6 @@
 欢迎来到 Arcade-plus 0.2.0！
 本次更新的内容有
+- 复制 Note 时将不会保持选中原来的 Note， 但是如果你在粘贴时按住左 Ctrl， 粘贴后会选中粘贴的 Note
+- 改善了 Arctap 粘贴失败时的报错信息
 - 修复了某些情况下显示范围外的小节线没有隐藏的问题
 - 修复了同时选中 Arc 和其上 ArcTap 时复制后报错的问题
