Add timing snap feature

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,5 +1,6 @@
 欢迎来到 Arcade-plus 0.2.0！
 本次更新的内容有
+- 右键菜单新增 Note 时间对齐功能
 - 复制 Note 时将不会保持选中原来的 Note， 但是如果你在粘贴时按住左 Ctrl， 粘贴后会选中粘贴的 Note
 - 绿蛇镜像后将依旧是绿的
 - 改善了 Arctap 粘贴失败时的报错信息
