--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,8 +1,10 @@
 欢迎来到 Arcade-plus 0.2.0！
 本次更新的内容有
+- 你现在可以在右下角的 “乐曲播放速度” 改变乐曲的播放速度，方便对音
 - 右键菜单新增 Note 时间对齐功能
 - 复制 Note 时将不会保持选中原来的 Note， 但是如果你在粘贴时按住左 Ctrl， 粘贴后会选中粘贴的 Note
 - 绿蛇镜像后将依旧是绿的
 - 改善了 Arctap 粘贴失败时的报错信息
 - 修复了某些情况下显示范围外的小节线没有隐藏的问题
 - 修复了同时选中 Arc 和其上 ArcTap 时复制后报错的问题
+- 由于底栏空间不够， 版本信息等移动到设置界面
