Use Prepare-commit-cancal in cleck to create

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -5,6 +5,7 @@
 - 在未加载谱面或谱面加载失败时会有醒目提示提醒你加载谱面
 - 复制 Note 时将不会保持选中原来的 Note， 但是如果你在粘贴时按住左 Ctrl， 粘贴后会选中粘贴的 Note
 - 复制操作取消后不会将重做命令列表内原有的命令替换为复制操作了
+- 添加蛇/长条操作取消之后将不会当作连续执行了添加和删除两个操作
 - 绿蛇镜像后将依旧是绿的
 - 改善了 Arctap 粘贴失败时的报错信息
 - 修复了某些情况下显示范围外的小节线没有隐藏的问题
