Extract texture loader to util

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -3,6 +3,8 @@
 - 你现在可以在右下角的 “乐曲播放速度” 改变乐曲的播放速度， 方便对音
 - 右键菜单新增 Note 时间对齐功能
 - 在未加载谱面或谱面加载失败时会有醒目提示提醒你加载谱面
+- 加载音源时会按照音源文件内容而非后缀名进行音源文件格式的判断了
+- 修复了文件夹路径中含有某些特殊字符时加载失败的问题
 - 复制 Note 时将不会保持选中原来的 Note， 但是如果你在粘贴时按住左 Ctrl， 粘贴后会选中粘贴的 Note
 - 复制操作取消后不会将重做命令列表内原有的命令替换为复制操作了
 - 添加蛇/长条操作取消之后将不会当作连续执行了添加和删除两个操作
