--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,3 +1,5 @@
+- 实验性支持 macOS 与 Linux,  如有任何运行异常请帮助我们修复问题
+- 修复了 Arc 高度不在 0 与 1 之间时颜色异常的问题
 - 修复了 25% 速度播放时乐曲音调不对的问题
 ---
 - 修复了打开没有 Arcade 文件夹的文件夹时弹出报错窗口的问题
