Various Camera fixes and improvements

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,4 +1,7 @@
 - 实验性支持 macOS 与 Linux,  如有任何运行异常请帮助我们修复问题
+- 提高了轨道倾斜程度随 Arc 位置而变化的动画速度
+- 修复了 0 时长 Camera Reset 事件所在时刻相机参数错乱的问题
+- 修复了在 Autoplay 打开并且有同时有 Arc 时 Camera Reset 事件导致轨道倾斜程度跳变的问题
 - 修复了 Arc 高度不在 0 与 1 之间时颜色异常的问题
 - 修复了 25% 速度播放时乐曲音调不对的问题
 ---
