--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,25 +1,3 @@
-- 实验性支持 macOS 与 Linux,  如有任何运行异常请帮助我们修复问题
-- 提高了轨道倾斜程度随 Arc 位置而变化的动画速度
-- 修复了 0 时长 Camera Reset 事件所在时刻相机参数错乱的问题
-- 修复了在 Autoplay 打开并且有同时有 Arc 时 Camera Reset 事件导致轨道倾斜程度跳变的问题
-- 修复了 Arc 高度不在 0 与 1 之间时颜色异常的问题
-- 修复了 25% 速度播放时乐曲音调不对的问题
----
-- 修复了打开没有 Arcade 文件夹的文件夹时弹出报错窗口的问题
----
-欢迎来到 Arcade-plus 0.2.0！
+欢迎来到 Arcade-plus 0.3.0！
 本次更新的内容有
-- 你现在可以在右下角的 “乐曲播放速度” 改变乐曲的播放速度， 方便对音
-- 右键菜单新增 Note 时间对齐功能
-- 在未加载谱面或谱面加载失败时会有醒目提示提醒你加载谱面
-- 加载音源时会按照音源文件内容而非后缀名进行音源文件格式的判断了
-- 修复了文件夹路径中含有某些特殊字符时加载失败的问题
-- 复制 Note 时将不会保持选中原来的 Note， 但是如果你在粘贴时按住左 Ctrl， 粘贴后会选中粘贴的 Note
-- 复制操作取消后不会将重做命令列表内原有的命令替换为复制操作了
-- 添加蛇/长条操作取消之后将不会当作连续执行了添加和删除两个操作
-- 绿蛇镜像后将依旧是绿的
-- 改善了 Arctap 粘贴失败时的报错信息
-- 修复了某些情况下显示范围外的小节线没有隐藏的问题
-- 修复了同时选中 Arc 和其上 ArcTap 时复制后报错的问题
-- 略微增强了皮肤系统
-- 由于底栏空间不够， 版本信息等移动到设置界面
+- Unity 版本更新至 2020.1
