Select Arc by Arctap

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,6 +1,7 @@
 欢迎来到 Arcade-plus 0.3.0！
 本次更新的内容有
 - Unity 版本更新至 2020.1
+- 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
 - 缩短了顶部提示信息的显示时长
 - 在非播放状态下不会轨道随着 arc 倾斜了
 - 编辑物件时不会再显示顶部提示信息了
