--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,6 +1,9 @@
 欢迎来到 Arcade-plus 0.3.0！
 本次更新的内容有
 - Unity 版本更新至 2020.1
+- 重写了谱面格式解析器，对谱面格式的要求更加宽松了
+- 谱面解析失败时的提示信息更详细了
+- 个别物件解析失败不会影响其它物件的加载了
 - 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
 - 缩短了顶部提示信息的显示时长
 - 在非播放状态下不会轨道随着 arc 倾斜了
