--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -6,6 +6,7 @@
 - 个别物件解析失败不会影响其它物件的加载了
 - 增加了对第四难度 Beyond 的支持
 - 针对 Arcaea 3.0 的界面进行了排版调整
+- 修正了谱面倒退时 hold 和 arc 的渲染方式
 - 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
 - 缩短了顶部提示信息的显示时长
 - 在非播放状态下不会轨道随着 arc 倾斜了
