--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -5,10 +5,11 @@
 - 谱面解析失败时的提示信息更详细了
 - 个别物件解析失败不会影响其它物件的加载了
 - 增加了对第四难度 Beyond 的支持
+- 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
+- 音符流速显示的数值改为与游戏内相同的 1.0 - 6.5
 - 针对 Arcaea 3.0 的界面进行了排版调整
 - 修正了谱面倒退时 hold 和 arc 的渲染方式
 - 修正了 hold 的贴图坐标
-- 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
 - 缩短了顶部提示信息的显示时长
 - 在非播放状态下不会轨道随着 arc 倾斜了
 - 编辑物件时不会再显示顶部提示信息了
