--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -7,6 +7,8 @@
 - 增加了对第四难度 Beyond 的支持
 - 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
 - 音符流速显示的数值改为与游戏内相同的 1.0 - 6.5
+- 增加了屏幕分辨率的选项
+- 增加了目标帧率设置
 - 针对 Arcaea 3.0 的界面进行了排版调整
 - 修正了谱面倒退时 hold 和 arc 的渲染方式
 - 修正了 hold 的贴图坐标
