Preserve unknown scenecontrol

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -5,6 +5,7 @@
 - 谱面解析失败时的提示信息更详细了
 - 个别物件解析失败不会影响其它物件的加载了
 - 增加了对第四难度 Beyond 的支持
+- 保存谱面时未识别的 scenecontrol 语句现在会保持原样输出
 - 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
 - 音符流速显示的数值改为与游戏内相同的 1.0 - 6.5
 - 增加了屏幕分辨率的选项
