NLayer mp3 decoder

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -11,6 +11,7 @@
 - 音符流速显示的数值改为与游戏内相同的 1.0 - 6.5
 - 增加了屏幕分辨率的选项
 - 增加了目标帧率设置
+- Mp3 文件解码改用 NLayer ，更稳定且跨平台 （但是会降低加载速度）
 - 针对 Arcaea 3.0 的界面进行了排版调整
 - 修正了谱面倒退时 hold 和 arc 的渲染方式
 - 修正了 hold 的贴图坐标
