--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -15,6 +15,7 @@
 - 针对 Arcaea 3.0 的界面进行了排版调整
 - 修正了谱面倒退时 hold 和 arc 的渲染方式
 - 修正了 hold 的贴图坐标
+- 修复了时间对齐时由于舍入误差时间多出 1ms 的问题
 - 缩短了顶部提示信息的显示时长
 - 在非播放状态下不会轨道随着 arc 倾斜了
 - 编辑物件时不会再显示顶部提示信息了
