More colorful timing grid

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,18 +1,22 @@
 欢迎来到 Arcade-plus 0.3.0！
 本次更新的内容有
 - Unity 版本更新至 2020.1
+- 完整的 TimingGroup 谱面预览支持
+- 实验性的 TimingGroup 编辑支持
 - 重写了谱面格式解析器，对谱面格式的要求更加宽松了
 - 谱面解析失败时的提示信息更详细了
 - 个别物件解析失败不会影响其它物件的加载了
 - 增加了对第四难度 Beyond 的支持
-- 保存谱面时未识别的 scenecontrol 语句现在会保持原样输出
-- 保存谱面时未识别的元信息数据现在会保持原样输出
 - 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
 - 音符流速显示的数值改为与游戏内相同的 1.0 - 6.5
-- 增加了屏幕分辨率的选项
+- 细分了网格线的颜色
+- 增加了屏幕分辨率的可选项
 - 增加了目标帧率设置
-- Mp3 文件解码改用 NLayer ，更稳定且跨平台 （但是会降低加载速度）
 - 针对 Arcaea 3.0 的界面进行了排版调整
+- 保存谱面时未识别的 scenecontrol 语句现在会保持原样输出
+- 保存谱面时未识别的元信息数据现在会保持原样输出
+- Mp3 文件解码改用 NLayer ，更稳定且跨平台 （但是会降低加载速度）
+- 修复了 Timing 编辑时由于 Timing 顺序错乱而导致的状态混乱问题
 - 修正了谱面倒退时 hold 和 arc 的渲染方式
 - 修正了 hold 的贴图坐标
 - 修复了时间对齐时由于舍入误差时间多出 1ms 的问题
