More relex for CrossTimingFault

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -3,7 +3,7 @@
 - Unity 版本更新至 2020.1
 - 完整的 TimingGroup 谱面预览支持
 - 实验性的 TimingGroup 编辑支持
-- 重写了谱面格式解析器，对谱面格式的要求更加宽松了
+- 重写了谱面格式解析器， 对谱面格式的要求更加宽松了
 - 谱面解析失败时的提示信息更详细了
 - 个别物件解析失败不会影响其它物件的加载了
 - 增加了对第四难度 Beyond 的支持
@@ -15,6 +15,7 @@
 - 针对 Arcaea 3.0 的界面进行了排版调整
 - 保存谱面时未识别的 scenecontrol 语句现在会保持原样输出
 - 保存谱面时未识别的元信息数据现在会保持原样输出
+- 放宽了查错工具对跨 Timing 物件的检查
 - Mp3 文件解码改用 NLayer ，更稳定且跨平台 （但是会降低加载速度）
 - 修复了 Timing 编辑时由于 Timing 顺序错乱而导致的状态混乱问题
 - 修正了谱面倒退时 hold 和 arc 的渲染方式
