--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -10,8 +10,9 @@
 - 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
 - 音符流速显示的数值改为与游戏内相同的 1.0 - 6.5
 - 细分了网格线的颜色
-- 增加了屏幕分辨率的可选项
+- 增加了全屏设置
 - 增加了目标帧率设置
+- 增加了屏幕分辨率的可选项
 - 针对 Arcaea 3.0 的界面进行了排版调整
 - 保存谱面时未识别的 scenecontrol 语句现在会保持原样输出
 - 保存谱面时未识别的元信息数据现在会保持原样输出
