last bpm 0 fix+track phase change+0.3.2

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,3 +1,8 @@
+0.3.2
+- 改写了轨道底板的移动方式， 现在它会在 BPM 小于 0 时倒退并且在 BPM 变化时不会发生突变了
+- 修复最后一条 Timing 的 BPM 为 0 时其后的物件不显示的问题
+
+---
 0.3.1
 - 修复 arc 和 arctap 的分数与 combo 计算中的问题
 
