--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,3 +1,8 @@
+0.3.3
+- 修复 Arc 复制时的渲染错乱问题
+
+---
+
 0.3.2
 - 改写了轨道底板的移动方式， 现在它会在 BPM 小于 0 时倒退并且在 BPM 变化时不会发生突变了
 - 修复最后一条 Timing 的 BPM 为 0 时其后的物件不显示的问题
