--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,7 +1,8 @@
 0.3.3
 - 修复 Arc 复制时的渲染错乱问题
 - 修复 Arc 编辑时连接关系不同步的问题
-- 修复 0 时长黑线 Arc 头部显示的问题
+- 修复 Arc 编辑时判定显示错误的问题
+- 修复 0 时长黑线 Arc 头部显示错误的问题
 
 ---
 
