Hold effect blink fix

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -4,6 +4,7 @@
 - HideGroup 类型的 SceneControl 谱面预览支持
 - 修复谱面 BPM 为负数时的各种物件渲染问题
 - 修复在两条 Arc 前后相连时打击特效在接缝处不显示的问题
+- 修复在 Hold 的打击特效在手动设置时间是会有一帧不显示的问题
 - 修复谱面含有 Camera 时开头部分镜头可能不会随着 Arc 的位置晃动的问题
 
 ---
