--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -6,6 +6,7 @@
 - 修复在两条 Arc 前后相连时打击特效在接缝处不显示的问题
 - 修复在 Hold 的打击特效在手动设置时间是会有一帧不显示的问题
 - 修复谱面含有 Camera 时开头部分镜头可能不会随着 Arc 的位置晃动的问题
+- 试图通过关闭高 DPI 屏幕支持来优化在 Mac 上的性能
 
 ---
 
