--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -3,6 +3,7 @@
 - Noinput 类型的 TimingGroup 谱面预览支持
 - HideGroup 类型的 SceneControl 谱面预览支持
 - 修复谱面 BPM 为负数时的各种物件渲染问题
+- TimingPointDensityFactor 的支持
 - 右键菜单新增了剪切操作，快捷键为 Ctrl+X
 - 修复复制时 Arctap 不显示的问题
 - 修复在两条 Arc 前后相连时打击特效在接缝处不显示的问题
