--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -7,7 +7,7 @@
 - 右键菜单新增了剪切操作，快捷键为 Ctrl+X
 - 修复复制时 Arctap 不显示的问题
 - 修复在两条 Arc 前后相连时打击特效在接缝处不显示的问题
-- 修复在 Hold 的打击特效在手动设置时间是会有一帧不显示的问题
+- 修复在 Hold 的打击特效在手动设置时间时会有一帧不显示的问题
 - 修复谱面含有 Camera 时开头部分镜头可能不会随着 Arc 的位置晃动的问题
 - 修复打开 0 物量谱面时 combo 文本不重置的问题
 - 试图通过关闭高 DPI 屏幕支持来优化在 Mac 上的性能
