Update Unity+Fix CameraTilt DeltaTime

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,108 +1,5 @@
-0.3.11
-
-- 加入实验性的段落选中功能，按住左 Shift 即可进行段落选中
-- 修复 Linux 下无法打开文件夹的问题
-- 改善谱面解析错误时的报错信息和自动修复方式
-
----
-
-0.3.10
-
-- 修复部分时间长度为 0 的 Arc 不显示的问题
-- 修复长度为 0 的 Arc 在当前时间等于其时间时时无法被选中的问题
-
-0.3.9
-
-- 修复时间长度为 0 的 Arc 不显示的问题
-
----
-
-0.3.8
-
-- 修复长度为 0 的 Arc 渲染时报错导致无法添加 Arc 的问题
-
----
-
-0.3.7
-
-- 修复 Auto 开启下编辑 Hold 的时间时判定不重置导致的显示问题
-- 修复编辑 Arc 的时间时的各种渲染问题
-
----
-
-0.3.6
-
-- 修复 AudioOffset 为绝对值较大的负数时 Note 提前消失的问题
-
----
-
-0.3.5
-
-- 你现在可以从负数时间开始播放谱面
-- 修复 SceneControl 与 AudioOffset 的关系错误的问题
-- 启动时默认的 Arc 形状类型现在为 S
-- 修复 BPM 为负数时 Arc 无法选中的问题
-
----
-
-0.3.4
-
-- Noinput 类型的 TimingGroup 谱面预览支持
-- HideGroup 类型的 SceneControl 谱面预览支持
-- 修复谱面 BPM 为负数时的各种物件渲染问题
-- TimingPointDensityFactor 的支持
-- 右键菜单新增了剪切操作，快捷键为 Ctrl+X
-- 修复复制时 Arctap 不显示的问题
-- 修复在两条 Arc 前后相连时打击特效在接缝处不显示的问题
-- 修复在 Hold 的打击特效在手动设置时间时会有一帧不显示的问题
-- 修复谱面含有 Camera 时开头部分镜头可能不会随着 Arc 的位置晃动的问题
-- 修复打开 0 物量谱面时 combo 文本不重置的问题
-- 试图通过关闭高 DPI 屏幕支持来优化在 Mac 上的性能
-
----
-
-0.3.3
-- 修复 Arc 复制时的渲染错乱问题
-- 修复 Arc 编辑时连接关系不同步的问题
-- 修复 Arc 编辑时判定显示错误的问题
-- 修复 0 时长黑线 Arc 头部显示错误的问题
-
----
-
-0.3.2
-- 改写了轨道底板的移动方式， 现在它会在 BPM 小于 0 时倒退并且在 BPM 变化时不会发生突变了
-- 修复最后一条 Timing 的 BPM 为 0 时其后的物件不显示的问题
-
----
-0.3.1
-- 修复 arc 和 arctap 的分数与 combo 计算中的问题
-
----
-
-欢迎来到 Arcade-plus 0.3.0！
+欢迎来到 Arcade-plus 0.4.0！
 本次更新的内容有
-- Unity 版本更新至 2020.1
-- 完整的 TimingGroup 谱面预览支持
-- 实验性的 TimingGroup 编辑支持
-- 重写了谱面格式解析器， 对谱面格式的要求更加宽松了
-- 谱面解析失败时的提示信息更详细了
-- 个别物件解析失败不会影响其它物件的加载了
-- 增加了对第四难度 Beyond 的支持
-- 你现在可以在选中单个 Arctap 时通过左上角编辑菜单选中其所在的 Arc
-- 音符流速显示的数值改为与游戏内相同的 1.0 - 6.5
-- 细分了网格线的颜色
-- 增加了全屏设置
-- 增加了目标帧率设置
-- 增加了屏幕分辨率的可选项
-- 针对 Arcaea 3.0 的界面进行了排版调整
-- 保存谱面时未识别的 scenecontrol 语句现在会保持原样输出
-- 保存谱面时未识别的元信息数据现在会保持原样输出
-- 放宽了查错工具对跨 Timing 物件的检查
-- Mp3 文件解码改用 NLayer ，更稳定且跨平台 （但是会降低加载速度）
-- 修复了 Timing 编辑时由于 Timing 顺序错乱而导致的状态混乱问题
-- 修正了谱面倒退时 hold 和 arc 的渲染方式
-- 修正了 hold 的贴图坐标
-- 修复了时间对齐时由于舍入误差时间多出 1ms 的问题
-- 缩短了顶部提示信息的显示时长
-- 在非播放状态下不会轨道随着 arc 倾斜了
-- 编辑物件时不会再显示顶部提示信息了
+
+- Unity 更新到 2020.3
+- 修复高帧率下镜头角度随 Arc 位置变化过快的问题
