Cancel operation by Esc

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,8 +1,9 @@
-欢迎来到 Arcade-plus 0.4.0！
+欢迎来到 Arcade-plus 0.4.0(Beta 测试版)！
 本次更新的内容有
 
 - Unity 版本更新到 2021.2
 - 改用新的 Unity Input System 处理输入
-- 现在可以自定义快捷键
+- 现在可以自定义快捷键了， 详见快捷键界面
+- 新增大量快捷键， 无需鼠标右键也可写谱， 详见快捷键界面
 - 调整了部分滚动框使用鼠标进行滚动时的滚动速度
 - 修复高帧率下镜头角度随 Arc 位置变化过快的问题
