--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -5,5 +5,7 @@
 - 改用新的 Unity Input System 处理输入
 - 现在可以自定义快捷键了， 详见快捷键界面
 - 新增大量快捷键， 无需鼠标右键也可写谱， 详见快捷键界面
+- 修复了延迟不为 0 时或者已经播放过时无法从负数时间开始播放的问题
+- 优化了音画同步机制，减少了播放时画面时间的跳变
 - 调整了部分滚动框使用鼠标进行滚动时的滚动速度
 - 修复高帧率下镜头角度随 Arc 位置变化过快的问题
