Fix CrossTimingFault on timinggroup

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -9,3 +9,4 @@
 - 优化了音画同步机制，减少了播放时画面时间的跳变
 - 调整了部分滚动框使用鼠标进行滚动时的滚动速度
 - 修复高帧率下镜头角度随 Arc 位置变化过快的问题
+- 修复谱面错误检查器对跨 Timing 的 Arc 的检测在 Arc 处于 TimingGroup 中时有误的问题
