--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,4 +1,4 @@
-欢迎来到 Arcade-plus 0.4.0(Beta 测试版)！
+欢迎来到 Arcade-plus 0.4.0！
 本次更新的内容有
 
 - Unity 版本更新到 2021.2
@@ -10,3 +10,5 @@
 - 调整了部分滚动框使用鼠标进行滚动时的滚动速度
 - 修复高帧率下镜头角度随 Arc 位置变化过快的问题
 - 修复谱面错误检查器对跨 Timing 的 Arc 的检测在 Arc 处于 TimingGroup 中时有误的问题
+- 自动保存和备份的文件名称中的时间改用 24 小时制
+- 为了避免播放时卡顿，正在播放谱面时不再会自动保存
