Camera space hit effect

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -2,7 +2,7 @@
 本次更新的内容有
 
 - Unity 版本更新到 2023.1
-- 打击特效改用 Visual Effect Graph 实现
+- 重做了打击特效，改用 Visual Effect Graph 实现
 - 重做了已选中物件的渲染效果
 - 改用 URP 进行渲染，可能会带来性能提升
 - 修复较高分辨率下轨道的微小渲染问题
