Click on background also deselect note

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -4,5 +4,6 @@
 - Unity 版本更新到 2023.1
 - 重做了打击特效，改用 Visual Effect Graph 实现
 - 重做了已选中物件的渲染效果
+- 现在点击背景也可以取消选中物件了
 - 改用 URP 进行渲染，可能会带来性能提升
 - 修复较高分辨率下轨道的微小渲染问题
