--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -5,5 +5,6 @@
 - 重做了打击特效，改用 Visual Effect Graph 实现
 - 重做了已选中物件的渲染效果
 - 现在点击背景也可以取消选中物件了
+- 现在可以先进入点立得的 ArcTap 模式，后选择黑线了
 - 改用 URP 进行渲染，可能会带来性能提升
 - 修复较高分辨率下轨道的微小渲染问题
