Undo should cancel ongoing operation

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -6,5 +6,7 @@
 - 重做了已选中物件的渲染效果
 - 现在点击背景也可以取消选中物件了
 - 现在可以先进入点立得的 ArcTap 模式，后选择黑线了
+- 现在在点立得启用时，选择物件时不会创建物件了
+- 现在使用撤销可以取消正在进行的操作了
 - 改用 URP 进行渲染，可能会带来性能提升
 - 修复较高分辨率下轨道的微小渲染问题
