Adjust chart velocity

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -12,6 +12,7 @@
 - 现在可以在选择坐标时滚动谱面了
 - 现在鼠标悬浮在背景上时也可以取消选中物件了
 - 现在使用撤销可以取消正在进行的操作了
+- 调整了实际渲染时的谱面流速
 - 调整了部分滚动条对滚轮操作的灵敏度
 - 改用 URP 进行渲染，可能会带来性能提升
 - 修复较高分辨率下轨道的微小渲染问题
