--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -4,15 +4,17 @@
 - Unity 版本更新到 2023.1
 - 重做了打击特效，改用 Visual Effect Graph 实现
 - 重做了已选中物件的渲染效果
+- 皮肤选择窗口加入了背景搜索器
+- 皮肤选择窗口调整了背景列表的布局
 - 现在可以通过左上物件编辑器中的按钮开始重新选择物件的时间、 结束时间、 轨道、 开始位置、 结束位置了
 - 上述重新选择操作也可以通过快捷键触发
 - 现在点击背景也可以取消选中物件了
-- 现在可以先进入点立得的 ArcTap 模式，后选择黑线了
-- 现在在点立得启用时，选择物件时不会创建物件了
+- 现在可以先进入点立得的 ArcTap 模式， 后选择黑线了
+- 现在在点立得启用时， 选择物件时不会创建物件了
 - 现在可以在选择坐标时滚动谱面了
 - 现在鼠标悬浮在背景上时也可以取消选中物件了
 - 现在使用撤销可以取消正在进行的操作了
 - 调整了实际渲染时的谱面流速
 - 调整了部分滚动条对滚轮操作的灵敏度
-- 改用 URP 进行渲染，可能会带来性能提升
+- 改用 URP 进行渲染， 可能会带来性能提升
 - 修复较高分辨率下轨道的微小渲染问题
