--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -4,6 +4,7 @@
 - Unity 版本更新到 2023.1
 - 重做了打击特效，改用 Visual Effect Graph 实现
 - 重做了已选中物件的渲染效果
+- 新增了向前 / 向后滚动谱面、 跳转到上一拍 / 下一拍、 跳转到上一小节 / 下一小节、 跳转到开头 / 结尾的快捷键
 - 皮肤选择窗口加入了背景搜索器
 - 皮肤选择窗口调整了背景列表的布局
 - 重做了 OBS 快速录制功能
