Fix OBS Setting

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -8,7 +8,7 @@
 - 皮肤选择窗口加入了背景搜索器
 - 皮肤选择窗口调整了背景列表的布局
 - 重做了 OBS 快速录制功能
-- 现在可以通过左上物件编辑器中的按钮开始重新选择物件的时间、 结束时间、 轨道、 开始位置、 结束位置了
+- 现在可以通过左上物件编辑器中的按钮， 开始重新选择物件的时间、 结束时间、 轨道、 开始位置、 结束位置了
 - 上述重新选择操作也可以通过快捷键触发
 - 现在点击背景也可以取消选中物件了
 - 现在可以先进入点立得的 ArcTap 模式， 后选择黑线了
