Fix resolution on high dpi screen

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -17,6 +17,7 @@
 - 现在鼠标悬浮在背景上时也可以取消选中物件了
 - 现在使用撤销可以取消正在进行的操作了
 - 调整了实际渲染时的谱面流速
+- 修复在高 dpi 屏幕上窗口大小设置错误的问题
 - 调整了部分滚动条对滚轮操作的灵敏度
 - 改用 URP 进行渲染， 可能会带来性能提升
 - 修复较高分辨率下轨道的微小渲染问题
