Fix watch incorrect file after difficult change

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,7 +1,8 @@
 0.5.1
 
 - 轨道的速度现在会随着谱面流速变化了
-- 修复编辑数值时可能会触发滚动相关的快捷键的问题
+- 修复自动刷新开启时并更改难度后， 监听的谱面文件错误的问题
+- 修复编辑数值时， 可能会触发滚动相关的快捷键的问题
 - 修复正在播放时难以向后滚动的问题
 
 ---
