Use int timing for scroll and snap

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -4,7 +4,7 @@
 - 修复自动刷新开启时并更改难度后， 监听的谱面文件错误的问题
 - 修复编辑数值时， 可能会触发滚动相关的快捷键的问题
 - 修复正在播放时难以向后滚动的问题
-- 修复网格线被 Note 覆盖的问题
+- 修复 Arc 坐标网格线被地面 Note 覆盖的问题
 
 ---
 
