Fix skin of arctap shadow

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,6 +1,7 @@
 0.5.3
 
-- 加入对于未知颜色的 Arc 的支持
+- 支持用颜色为 3 的直角 Arc 模拟可变尺寸的 Arctap
+- 支持未知颜色的 Arc
 - 修复特定情况下打击特效会渲染在 ArcTap 之后的问题
 - 修复 NoInput 下 Arc 开头的渲染位置
 - 修复负数 BPM 下 Arc 的渲染
