Make sure arc segment aabb contain origin to make unity sort correctly

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,4 +1,7 @@
-欢迎来到 Arcade-plus 0.6.0！
+欢迎来到 Arcade-plus 0.6.0 Alpha 测试版！
 本次更新的内容有
 
 - Unity 版本更新到 6000.0
+- 修复了 Arc 渲染先后顺序
+- 修复了特定情况下部分 Arc 不渲染的问题
+- 微调了部分界面的鼠标滚轮敏感度
