Support for eternal difficulty

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -2,6 +2,8 @@
 本次更新的内容有
 
 - Unity 版本更新到 6000.0
+- 新增 Eternal 难度支持
 - 修复了 Arc 渲染先后顺序
 - 修复了特定情况下部分 Arc 不渲染的问题
+- 修正了 Arc 连接与物量的计算
 - 微调了部分界面的鼠标滚轮敏感度
