Adjust arc transparency

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -7,6 +7,7 @@
 - 提升了部分贴图的分辨率
 - 修复了 Arc 渲染先后顺序
 - 修复了特定情况下部分 Arc 不渲染的问题
+- 调整了 Arc 渲染的透明度
 - 修正了 Arc 连接与物量的计算
 - 调整了 Arc 判定时轨道倾斜的速度
 - 微调了部分界面的鼠标滚轮敏感度
