Show value instead of placeholder when multiple selected note have same value for string field

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -3,6 +3,7 @@
 
 - Unity 版本更新到 6000.0
 - 新增 Eternal 难度支持
+- 选中的多个物件的参数相同时， 参数编辑器会显示该数值
 - 对含有 Arctap 的 1 毫秒黑线 Arc 进行时间对齐操作时， 不会再使黑线拉长
 - 提升了部分贴图的分辨率
 - 修复了 Arc 渲染先后顺序
