Do not separate arctap on 1ms void arc

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -3,6 +3,7 @@
 
 - Unity 版本更新到 6000.0
 - 新增 Eternal 难度支持
+- 选中含有 ArcTap 的 Arc 时可以将其上的 ArcTap 分离到单独的 Arc 上
 - 选中的多个物件的参数相同时， 参数编辑器会显示该数值
 - 参数编辑器遇到非法输入时， 不会弹出报错窗口， 改为弹出顶部提示信息
 - 选中物件并撤销时， 参数编辑器会更新物件的参数
@@ -13,4 +14,5 @@
 - 调整了 Arc 渲染的透明度
 - 修正了 Arc 连接与物量的计算
 - 调整了 Arc 判定时轨道倾斜的速度
+- 调整了打击特效渲染的层级
 - 微调了部分界面的鼠标滚轮敏感度
