--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -3,11 +3,12 @@
 
 - Unity 版本更新到 6000.0
 - 新增 Eternal 难度支持
-- 选中含有 ArcTap 的 Arc 时可以将其上的 ArcTap 分离到单独的 Arc 上
+- 选中含有 ArcTap 的 Arc 时可以将其上的 ArcTap 分离到单独的 1 毫秒黑线 Arc 上
 - 选中的多个物件的参数相同时， 参数编辑器会显示该数值
 - 参数编辑器遇到非法输入时， 不会弹出报错窗口， 改为弹出顶部提示信息
 - 选中物件并撤销时， 参数编辑器会更新物件的参数
 - 对含有 Arctap 的 1 毫秒黑线 Arc 进行时间对齐操作时， 不会再使黑线拉长
+- 段落选中时若选中 1 毫秒黑线 Arc 上的 Arctap， 那么会自动选中所在的 Arc
 - 提升了部分贴图的分辨率
 - 修复了 Arc 渲染先后顺序
 - 修复了特定情况下部分 Arc 不渲染的问题
