Skinning for dialog components

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -10,6 +10,7 @@
 - 选中物件并撤销时， 参数编辑器会更新物件的参数
 - 对含有 Arctap 的 1 毫秒黑线 Arc 进行时间对齐操作时， 不会再使黑线拉长
 - 段落选中时若选中 1 毫秒黑线 Arc 上的 Arctap， 那么会自动选中所在的 Arc
+- 同时打开多个窗口时，后打开的窗口会显示在前面
 - 提升了部分贴图的分辨率
 - 修复了 Arc 渲染先后顺序
 - 修复了特定情况下部分 Arc 不渲染的问题
