fallback to base_256 when base cover is not available

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -3,6 +3,7 @@
 
 - Unity 版本更新到 6000.0
 - 新增 Eternal 难度支持
+- 新增高清封面 1080_base.jpg 支持
 - 点立得支持不在现有的 Arc 上添加 ArcTap， 而是直接添加 ArcTap 并生成其所在的 1 毫秒黑线 Arc
 - 选中含有 ArcTap 的 Arc 时可以将其上的 ArcTap 分离到单独的 1 毫秒黑线 Arc 上
 - 选中的多个物件的参数相同时， 参数编辑器会显示该数值
