Per difficulty cover

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -3,7 +3,9 @@
 
 - Unity 版本更新到 6000.0
 - 新增 Eternal 难度支持
-- 新增高清封面 1080_base.jpg 支持
+- 新增高清封面（ 1080_base.jpg 等）的支持
+- 封面读取失败时现在会再尝试读取封面缩略图（ base_256.jpg 等）
+- 新增不同难度使用不同封面的支持
 - 点立得支持不在现有的 Arc 上添加 ArcTap， 而是直接添加 ArcTap 并生成其所在的 1 毫秒黑线 Arc
 - 选中含有 ArcTap 的 Arc 时可以将其上的 ArcTap 分离到单独的 1 毫秒黑线 Arc 上
 - 选中的多个物件的参数相同时， 参数编辑器会显示该数值
@@ -18,6 +20,7 @@
 - 修复了特定情况下部分 Arc 不渲染的问题
 - 调整了 Arc 渲染的透明度
 - 修正了 Arc 连接与物量的计算
+- 修正了 0 BPM 下 Hold 物量的计算
 - 调整了 Arc 判定时轨道倾斜的速度
 - 调整了打击特效渲染的层级
 - 微调了部分界面的鼠标滚轮敏感度
