--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -6,6 +6,7 @@
 - 新增高清封面（ 1080_base.jpg 等）的支持
 - 封面读取失败时现在会再尝试读取封面缩略图（ base_256.jpg 等）
 - 新增不同难度使用不同封面的支持
+- 新增不同难度使用不同音源的支持
 - 点立得支持不在现有的 Arc 上添加 ArcTap， 而是直接添加 ArcTap 并生成其所在的 1 毫秒黑线 Arc
 - 选中含有 ArcTap 的 Arc 时可以将其上的 ArcTap 分离到单独的 1 毫秒黑线 Arc 上
 - 选中的多个物件的参数相同时， 参数编辑器会显示该数值
@@ -15,6 +16,7 @@
 - 段落选中时若选中 1 毫秒黑线 Arc 上的 Arctap， 那么会自动选中所在的 Arc
 - 同时打开多个窗口时，后打开的窗口会显示在前面
 - 为防止误导，“基准 BPM” 一栏改名为 “流速基准”
+- 不同难度使用不同音源时， 它们的流速基准会分别保存
 - 提升了部分贴图的分辨率
 - 修复了 Arc 渲染先后顺序
 - 修复了特定情况下部分 Arc 不渲染的问题
