Load BaseBPM before load chart

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -9,6 +9,7 @@
 - 新增不同难度使用不同音源的支持
 - 点立得支持不在现有的 Arc 上添加 ArcTap， 而是直接添加 ArcTap 并生成其所在的 1 毫秒黑线 Arc
 - 选中含有 ArcTap 的 Arc 时可以将其上的 ArcTap 分离到单独的 1 毫秒黑线 Arc 上
+- 新增全局音频延迟设置， 此设置数值越大音频播放时间越早 ，单位为毫秒
 - 顶部显示的的当前时间， 现在可以在音频时间和谱面时间之间切换
 - 选中的多个物件的参数相同时， 参数编辑器会显示该数值
 - 参数编辑器遇到非法输入时， 不会弹出报错窗口， 改为弹出顶部提示信息
