Fix state of audioClip after created by audio loaders

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -11,6 +11,7 @@
 - 选中含有 ArcTap 的 Arc 时可以将其上的 ArcTap 分离到单独的 1 毫秒黑线 Arc 上
 - 新增全局音频延迟设置， 此设置数值越大音频播放时间越早 ，单位为毫秒
 - 顶部显示的的当前时间， 现在可以在音频时间和谱面时间之间切换
+- 现在可以用滑块设置音量了
 - 选中的多个物件的参数相同时， 参数编辑器会显示该数值
 - 参数编辑器遇到非法输入时， 不会弹出报错窗口， 改为弹出顶部提示信息
 - 选中物件并撤销时， 参数编辑器会更新物件的参数
@@ -19,6 +20,7 @@
 - 同时打开多个窗口时，后打开的窗口会显示在前面
 - 为防止误导，“基准 BPM” 一栏改名为 “流速基准”
 - 不同难度使用不同音源时， 它们的流速基准会分别保存
+- 修复了启动后或者重新加载皮肤后， 第一次播放打击音效时音效错乱的问题
 - 提升了部分贴图的分辨率
 - 修复了 Arc 渲染先后顺序
 - 修复了特定情况下部分 Arc 不渲染的问题
