--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -12,6 +12,7 @@
 - 新增全局音频延迟设置， 此设置数值越大音频播放时间越早 ，单位为毫秒
 - 顶部显示的的当前时间， 现在可以在音频时间和谱面时间之间切换
 - 现在可以用滑块设置音量了
+- 现在可以用文本框设置音符流速了
 - 选中的多个物件的参数相同时， 参数编辑器会显示该数值
 - 参数编辑器遇到非法输入时， 不会弹出报错窗口， 改为弹出顶部提示信息
 - 选中物件并撤销时， 参数编辑器会更新物件的参数
