Adjust render layer between arc and arc height indicator

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -25,6 +25,7 @@
 - 不同难度使用不同音源时， 它们的流速基准会分别保存
 - 修复了启动后或者重新加载皮肤后， 第一次播放打击音效时音效错乱的问题
 - 提升了部分贴图的分辨率
+- 重新加载谱面时， 不会先重置当前时间了
 - 修复了 Arc 渲染先后顺序
 - 修复了特定情况下部分 Arc 不渲染的问题
 - 调整了 Arc 渲染的透明度
