--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,10 +1,11 @@
 0.6.1
 
+- 支持 Designate 类型的 Arc
 - 皮肤设置种新增 Lephon （殸界）侧支持
 - 调整了皮肤设置种各侧的名称
 - 右上角的指针信息栏现在不再阻挡点击事件
 - 修复问题检查不工作的问题。
-- 修复在进行编辑操作时重新加载谱面后会报错的问题
+- 修复在进行编辑操作时， 重新加载谱面后会报错的问题
 - 修复曲师、 曲名、 难度一栏有时未能正常保存的问题
 - 修复了 Arc 头在 Timing 倒退时意外出现的问题
 
