Fix 0 bpm arc camera tilt

--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -2,6 +2,7 @@
 
 - 修复了可变尺寸的 Arctap 不会和 Tap 有连接线的问题
 - 修复了 Noinput 下的 Tap 会和 ArcTap 有连接线的问题
+- 修复了 BPM 为 0 时 Arc 判定导致的相机倾斜不正常的问题
 - 调整了 ArcTap 的渲染尺寸和朝向
 - 调整了 Arc 的开头部分的渲染层次
 
