--- a/Assets/Misc/ChangeLog.txt
+++ b/Assets/Misc/ChangeLog.txt
@@ -1,13 +1,14 @@
 0.6.7
 
-- 显示直角 Arc 的初始位置提示
+- 修复了直角 Arc 的初始位置提示不显示的问题
 - 调整了 Arc 的开头部分的渲染层次
+- 调整了直角黑线 Arc 穿过判定面时间的判定方式
 
 ---
 
 0.6.6
 
-- 修复了已经穿过判定面的直角黑线 arc 在负数 BPM 下会重复出现的问题
+- 修复了已经穿过判定面的直角黑线 Arc 在负数 BPM 下会重复出现的问题
 - 调整了 Arc 材质的渲染
 - 调整了渲染距离范围
 - 调整了 Arc 的开头部分的渲染层次
